# vm-x-ai-sdk

./: .cz-config.js  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  eslint.config.js  lint-staged.config.js  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  release.base.config.js  tsconfig.base.json
.cursor/: mcp.json
.github/actions/setup-monorepo/: action.yml
.github/actions/setup-release/: action.yml
.github/workflows/: automatic-release.yml  pull-request.yml  release.yml
polyfills/ts-proto/: protoc-gen-ts_proto
release/: util.js
