[tool.nx]
autoActivate = true

[tool.poetry]
name = "@vm-x-ai/sdk"
version = "1.0.38"
description = ""
authors = [ ]
license = "Proprietary"
readme = "README.md"
package-mode = false

  [tool.poetry.dependencies]
  python = ">=3.9,<4"

    [tool.poetry.dependencies.vm-x-ai-sdk]
    path = "packages/sdk/python"
    develop = true

    [tool.poetry.dependencies.vm-x-ai-sdk-example]
    path = "packages/sdk/python-example"
    develop = true

    [tool.poetry.dependencies.langchain-vm-x-ai]
    path = "packages/langchain/python"
    develop = true

    [tool.poetry.dependencies.langchain-vm-x-ai-example]
    path = "packages/langchain/python-example"
    develop = true

    [tool.poetry.dependencies.vm-x-ai-completion-client]
    path = "packages/completion/client/python"
    develop = true

[tool.poetry.group.dev.dependencies]
autopep8 = "2.1.0"
ruff = "0.4.1"
pytest = "8.1.1"
pytest-sugar = "1.0.0"
pytest-cov = "5.0.0"
pytest-html = "4.1.1"
grpcio-tools = "^1.62.2"

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
